--- a/README
+++ b/README
@@ -1,1 +1,33 @@
-treemap
+# React + ECharts Treemap
+
+这是一个使用 React 和 ECharts 渲染 treemap 的最小示例。项目基于 Vite，安装依赖后即可本地运行。
+
+## 快速开始
+
+1. 安装依赖（如果 npm registry 被限制，可先配置镜像，例如 `npm config set registry https://registry.npmmirror.com`）
+
+   ```bash
+   npm install
+   ```
+
+2. 启动开发服务器
+
+   ```bash
+   npm run dev
+   ```
+
+   默认会在 <http://localhost:5173/> 提供预览。
+
+3. 生产构建
+
+   ```bash
+   npm run build
+   npm run preview
+   ```
+
+## 代码说明
+- `src/App.jsx`：使用 `echarts-for-react` 渲染 treemap，示例数据包含三层（洲→国家→省/州），支持放大节点和完整路径提示。
+- `src/styles.css`：简单的页面和卡片样式。
+- `index.html`：入口 HTML，挂载 React 应用。
+
+修改 `treemapData` 即可快速调整分区或数值。
